2014-02-08  Glenn Morris  <rgm@gnu.org>

	* auth.texi (GnuPG and EasyPG Assistant Configuration):
	Be agnostic about authinfo/authinfo.gpg default order.  (Bug#16642)

2014-02-06  Glenn Morris  <rgm@gnu.org>

	* epa.texi (Mail-mode integration): Mention epa-mail-aliases.

2014-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (MIME Commands): Mention
	gnus-mime-buttonize-attachments-in-header and
	gnus-mime-display-attachment-buttons-in-header.

2014-02-05  Glenn Morris  <rgm@gnu.org>

	* epa.texi: Add indices.

2014-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.texi (Forwarding): Mention
	`message-forward-included-headers'.

2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi: w3 is no longer supported by Gnus.

2014-01-24  Glenn Morris  <rgm@gnu.org>

	* emacs-mime.texi (time-date): Use float-time.

2014-01-05  Paul Eggert  <eggert@cs.ucla.edu>

	Specify .texi encoding (Bug#16292).
	* auth.texi, epa.texi, gnus-coding.texi, gnus-faq.texi, message.texi:
	* sasl.texi, sieve.texi: Add @documentencoding.

2013-08-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* emacs-mime.texi (Encoding Customization): Exclude iso-2022-jp-2 and
	shift_jis from the default value set to mm-coding-system-priorities for
	Japanese users.

2013-08-13  Glenn Morris  <rgm@gnu.org>

	* epa.texi (Encrypting/decrypting gpg files):
	Rename nodes to avoid characters that can cause Texinfo problems.

2013-08-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (Mail Source Specifiers): Fix description for pop3's :leave.

2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.texi (Basic Usage): Mention that warp means jump here.
	(The notmuch Engine): Mention notmuch.

2013-07-30  Tassilo Horn  <tsdh@gnu.org>

	* gnus.texi (Sorting the Summary Buffer): Document new defcustom
	`gnus-subthread-sort-functions' and remove the obsolete documentation
	of `gnus-sort-threads-recursively'.

2013-07-26  Tassilo Horn  <tsdh@gnu.org>
