@@ -58,6 +58,51 @@ which are indicated by the @copying ... @end copying command."
       (delete-region (match-beginning 0) (match-end 0))
       (texinfo-insertcopying))))
 
+(if (fboundp 'texinfo-format-comma)
+    nil
+  (put 'comma 'texinfo-format 'texinfo-format-comma)
+  (defun texinfo-format-comma ()
+    (texinfo-parse-arg-discard)
+    (insert ",")
+    (put-text-property (1- (point)) (point) 'ignore t))
+
+  ;; Redefine this function so as to work for @comma
+  (defun texinfo-format-parse-args ()
+    (let ((start (1- (point)))
+	  next beg end
+	  args)
+      (search-forward "{")
+      (save-excursion
+	(texinfo-format-expand-region
+	 (point)
+	 (save-excursion (up-list 1) (1- (point)))))
+      ;; The following does not handle cross references of the form:
+      ;; `@xref{bullet, , @code{@@bullet}@{@}}.' because the
+      ;; re-search-forward finds the first right brace after the second
+      ;; comma.
+      (while (/= (preceding-char) ?\})
+	(skip-chars-forward " \t\n")
+	(setq beg (point))
+;;;	(re-search-forward "[},]")
+	;; Ignore commas that are derived from @comma{}.
+	(while (and (re-search-forward "[},]" nil t)
+		    (get-text-property (match-beginning 0) 'ignore)))
+;;;
+	(setq next (point))
+	(forward-char -1)
+	(skip-chars-backward " \t\n")
+	(setq end (point))
+	(cond ((< beg end)
+	       (goto-char beg)
+	       (while (search-forward "\n" end t)
+		 (replace-match " "))))
+	(push (if (> end beg) (buffer-substring-no-properties beg end))
+	      args)
+	(goto-char next))
+      ;;(if (eolp) (forward-char 1))
+      (setq texinfo-command-end (point))
+      (nreverse args))))
+
 (defun infohack-remove-unsupported ()
   (goto-char (point-min))
   (while (re-search-forward "@\\(end \\)?ifnottex" nil t) 
@@ -66,6 +111,19 @@ which are indicated by the @copying ... @end copying command."
   (while (search-forward "\n@iflatex\n" nil t)
     (delete-region (1+ (match-beginning 0))
 		   (search-forward "\n@end iflatex\n"))))
+
+(defun infohack-replace-unsupported ()
+  (goto-char (point-min))
+  (while (search-forward "@indicateurl{" nil t)
+    (replace-match "@url{"))
+  (goto-char (point-min))
+  (while (search-forward "@enumerate" nil t)
+    (narrow-to-region (point)
+		      (or (re-search-forward "@end[\t ]+enumerate" nil t)
+			  (point-max)))
+    (goto-char (point-min))
+    (while (re-search-forward "@item[\t ]+\\([^\t\n ]\\)" nil t)
+      (replace-match "@item\n\\1"))))
 
 (defun infohack-include-files ()
   "Insert @include files."
@@ -103,6 +161,7 @@ which are indicated by the @copying ... @end copying command."
     (setq coding-system buffer-file-coding-system)
     (infohack-remove-unsupported)
     (infohack-include-files)
+    (infohack-replace-unsupported)
     (texinfo-every-node-update) 
     (texinfo-format-buffer t) ;; Don't save any file.
     (setq default-directory dest-directory)
